--- a/src/CountKMers.Rmd
+++ b/src/CountKMers.Rmd
@@ -16,7 +16,7 @@ library(Biostrings)
 
 This document is to produce k-mer count tables from fasta-format files.
 
-We apply it to count 5-mers in Cryptococus H99 approximate (500nt) promoters.
+We apply it to count 5-mers in Cryptococus H99 approximate (500nt) promoters, and approximate (250nt) terminators. These were both taken from [fungidb](http://fungidb.org/) using the sequence retrieval tool in June 2020. Promoters were genomic sequence from 500nt upstream to 0nt upstream of the translation start codon, terminators were taken from 1nt downstream to 250nt downstream of the translation stop codon. In principle, we would get better results using the best-available annotations from the Janbon lab, published in [Quantitative global studies..., NAR 2020](https://doi.org/10.1093/nar/gkaa060).
 
 ## Define kmer-counting functions
 
@@ -106,5 +106,50 @@ readr::write_tsv(x = promoter_5mer_counts,
                  append=TRUE,col_names=TRUE)
 
 close(promoter_5mer_counts_file)
+```
+
+## Count 5-mers for Cryptococcus terminators
+
+```{r count_5mers_H99terminators}
+terminatorseqs_file <- here::here("data","H99_allorfs_terminator250nt.fasta")
+terminatorseqs <- Biostrings::readDNAStringSet(terminatorseqs_file)
+
+terminatorseqids <- names(terminatorseqs) %>%
+    stringr::str_extract(pattern="\\w+")
+
+all_5mers <- make_kmer_list(k=5L)
+
+terminator_5mer_countsonly <- terminatorseqs %>%
+    as.character() %>%
+    count_kmer_tibble(kmer_list = all_5mers, k=5L)
+
+terminator_5mer_counts <- bind_cols(tibble(Gene=terminatorseqids),
+                                  terminator_5mer_countsonly)
+
+terminator_5mer_counts
+```
+
+```{r write_5mers_H99terminators}
+terminator_5mer_counts_file <-
+    here::here("data","H99_allorfs_terminator250nt_5mercounts.txt.gz") %>%
+    gzfile("w" )
+
+write_lines(c("# H99_allorfs_terminator250nt_5mercounts.txt",
+              "# 5-mer counts from Cryptococcus neoformans H99 approximate terminators",
+              "# Edward Wallace, Edward.Wallace@ed.ac.uk, June 2020",
+              "# Contents:",
+              "#   Gene: C. neoformans H99 systematic ORF name",
+              "#   AAAAA: counts of 5-mer AAAAA in the approximate terminator 250nt downstream of stop codon",
+              "#   CAAAA: counts of 5-mer CAAAA, etc. ",
+              "#     one column for all 1024 5-mers from DNA alphabet, *rows* add up to <= 246",
+              "#     some sequences have missing nucleotides written as N, and those are not counted here",
+              "# "),
+            path=terminator_5mer_counts_file)
+
+readr::write_tsv(x = terminator_5mer_counts,
+                 path = terminator_5mer_counts_file,
+                 append=TRUE,col_names=TRUE)
+
+close(terminator_5mer_counts_file)
 ```
 
